# api/openapi.yml
@@ -18,9 +18,9 @@ components:
   schemas:
     AuthRequest:
       type: object
-      required: [email, password]
+      required: [username, password]
       properties:
-        email:
+        username:
           type: string
         password:
           type: string
